--- a/index.html
+++ b/index.html
@@ -90,149 +90,11 @@
         </div>
     </header>
     <div style="background-image: linear-gradient(-90deg, #29bdd9 0%, #276ace 100%);">
-        <main style="padding-top: 20px;">
-            <div class="container" >
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">父亲写的散文诗 李健 20/05/05</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        但愿他们能<span style="color: #fa4558"> 不要活得如此艰难 </span>
-                    </div>
-                </div>
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">理想 赵雷 20/05/05</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        因为已是<span style="color: #fa4558"> 当父亲的年纪 </span>
-                    </div>
-                </div>
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">初中前的生活 20/05/05</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        我写这个日记的原因
-                        <br>
-                        今天看吃播，有个博主做了一起腌菜炒肉
-                        <br>
-                        哎，小时候家里穷，吃肉很难，对腌菜炒肉很有印象，腌菜猪肉比为(100:1),毫不夸张的。
-                        <br>
-                        菜上桌，我肯定选肉去啦，几十秒后，菜已经被翻了几十遍，😄，就只有吃腌菜了，偶尔翻出个肥肉跟现在赚了几万是一样的感觉...
-                        <br>
-                        我们家以前看富不富裕，主要就是看肉和腌菜的比例，😁
-                    </div>
-                </div>
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">编程年限 20/05/06</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        今天看到一条 'juejin.im' 的推荐
-                        <br>
-                        有人这样说道：'每次加班看到30多岁的同事也在加，就仿佛看到十年后的我'
-                        <br>
-                        评论又一次一边倒的一大部分人开始 '嘲讽，看扁，青春饭...' 自己的职业
-                        <br>
-                        这些人应该被抓去浸猪笼，难道不是吗？
-                        <br>
-                        nmgb，这群人自身本就是 Rubbish
-                        <br>
-                        讲真的，你现在出去干你认为你能<span style="color: #fa4558"> 做到死并且自己特别满意 </span>的工作就好了，非得天天在网络bb
-                        <br>
-                        生命一分一秒在流逝，可他们感觉不到！
-                    </div>
-                </div>
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">理想 非赵雷 20/05/07</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        昨晚上理想又变了
-                        <br>
-                        创业 或者 买房
-                        <br>
-                        不知道选择什么？
-                        <br>
-                        不知道怎样选择以后不会后悔！
-                        <br>
-                        好烦啊！
-                    </div>
-                </div>
-                <div class="panel panel-info">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">取名 20/05/07</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        <del>李思洁</del>
-                        <br>
-                        李采洁
-                        <br>
-                        李学文
-                        <br>
-                        李杰
-                        <br>
-                        李振宇
-                        <br>
-                        <del>李香兰</del>
-                    </div>
-                </div>
-                <div class="panel panel-success">
-                    <div class="panel-heading">
-                        <h3 class="panel-title">居安思危 20/05/10</h3>
-                    </div>
-                    <div class="panel-body pantran dis">
-                        今天脑海里一下就浮现出了<span style="color: #fa4558"> 居安思危 </span>这个词
-                        <br>
-                        现在活的很轻松
-                        <br>
-                        但是十年后自己又会是什么样子喃！！
-                        <br>
-                        想着真累，但是又不能不想
-                        <br>
-                        十年前的我和现在的我就是一个地地地地地地地地下，一个地上
-                        <br>
-                        如果未来十年我回到了十年前的样子怎么办呀
-                        <br>
-                        又或者说到了一个<span style="color: #fa4558"> "上有老下有小" </span>的时候又怎么办啊
-                        <br>
-                        到了30-35岁后，职业干不动了，又能去做什么啊！！！
-                        <br>
-                        <span style="color: #fa4558">到30岁也就还有五年时间了</span>
-                        <br>
-                        五年，五年，我也不知道未来五年怎么过啊！！！
-                        <br>
-                        来个仙人指指路啊
-                    </div>
-                </div>
-            </div>
-        </main>
-        <footer id="fh5co-footer" role="contentinfo" style="color: #f0e8e8;">
-            <div class="container">
-
-                <div class="row copyright">
-                    <div class="col-md-12 text-center">
-                        <p>
-                            <small class="block">
-                                创业两次了，虽都以失败而告终，亏了很多钱！！！
-                            </small>
-                        </p>
-                        <p>
-                            <small class="block">
-                                但是我不死心啊，我想创业，必须创业，希望得到家人的支持和意见
-                            </small>
-                        </p>
-                        <p>
-                            <small class="block">
-                                6.30了，终于可以上去睡觉了...
-                            </small>
-                        </p>
-                    </div>
-                </div>
-
-            </div>
-        </footer>
+        <ul>
+            <li>去西岭雪山</li>
+            <li>去峨眉山</li>
+            <li>去深圳看看三和大神</li>
+        </ul>
     </div>
 </div>
 
@@ -258,7 +120,7 @@
 <script src="js/main.js"></script>
 
 <script>
-    var d = new Date('2020/08/01');
+    var d = new Date('2020/10/01');
     console.log(d)
 
     // default example
